final feedback hw

--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,4 +1,4 @@
-.feedback {
+.section {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
@@ -11,7 +11,7 @@
         rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
 }
 
-.feedback__title {
+.sectionTitle {
     display: flex;
     justify-content: center;
     margin: 0;
